# AI-FOR-ECONOMIST

./: .env.example  .gitignore  BUGFIX_REPORT.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  run.py
config/: settings.py
src/: __init__.py  crawler.py  driver_manager.py  fallback_downloader.py  summary_generator.py  text_extractor.py  workflow.py
